k8s/voting-app/result/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting-app
  labels:
    app: result
spec:
  type: LoadBalancer
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
